[gd_scene load_steps=15 format=3 uid="uid://c356qio6dv8ir"]

[ext_resource type="Script" path="res://scenes/entities/enemies/give_me_a_bag/give_me_a_bag_enemy.gd" id="1_gntgd"]
[ext_resource type="PackedScene" uid="uid://p4c321o2n7ho" path="res://scenes/components/random_stream_player_2d_component.tscn" id="2_08hsj"]
[ext_resource type="Texture2D" uid="uid://icudln6va4fy" path="res://art/give_me_a_bag_enemy/gimme_a_bag_enemy.png" id="2_djiko"]
[ext_resource type="AudioStream" uid="uid://b5k48w2fx21gl" path="res://audio/junkie_enemy/junkie_get_out_of_my_way.wav" id="3_s0mem"]
[ext_resource type="AudioStream" uid="uid://2lbqeq2yroml" path="res://audio/junkie_enemy/junkie_gimme_a_bag.wav" id="4_r8kdy"]
[ext_resource type="AudioStream" uid="uid://dq3swpg2i72s4" path="res://audio/junkie_enemy/junkie_gimme_a_bag_now.wav" id="5_mt1nw"]
[ext_resource type="Script" path="res://scenes/entities/FiniteStateMachine.gd" id="7_duys6"]
[ext_resource type="Script" path="res://scenes/entities/Idle.gd" id="8_gex56"]
[ext_resource type="Script" path="res://scenes/entities/Shoot.gd" id="9_5selo"]
[ext_resource type="Script" path="res://scenes/entities/Follow.gd" id="10_q43re"]
[ext_resource type="PackedScene" uid="uid://bwt1yu4y740qt" path="res://scenes/entities/enemies/give_me_a_bag/give_me_a_bag_enemy_projectile.tscn" id="10_s3dv3"]
[ext_resource type="Script" path="res://scenes/entities/enemies/give_me_a_bag/Dash.gd" id="12_rl8y2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1j3vs"]
size = Vector2(7, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpx4o"]
size = Vector2(16, 16)

[node name="GiveMeABagEnemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 6
motion_mode = 1
script = ExtResource("1_gntgd")
movement_speed = 20.0
acceleration = 1.0

[node name="Debug" type="Label" parent="."]
offset_left = -6.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 2.0
scale = Vector2(0.37004, 0.339794)
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -9.0
offset_top = -27.0
offset_right = 91.0
scale = Vector2(0.182417, 0.182417)
max_value = 4.0
value = 4.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_djiko")

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("2_08hsj")]
volume_db = -10.0
streams = Array[AudioStream]([ExtResource("3_s0mem"), ExtResource("4_r8kdy"), ExtResource("5_mt1nw")])
randomise_pitch = false

[node name="PlayerDetectionRay" type="RayCast2D" parent="."]
position = Vector2(0, -8)
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_1j3vs")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_dpx4o")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("7_duys6")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_gex56")

[node name="Shoot" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_5selo")
projectile_node = ExtResource("10_s3dv3")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Shoot"]

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_q43re")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_rl8y2")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Dash"]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="FiniteStateMachine/Shoot/Timer" to="FiniteStateMachine/Shoot" method="_on_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Dash/Timer" to="FiniteStateMachine/Dash" method="_on_timer_timeout"]
